Use .mpeg extension and MPEG-4 format, include API key in credentials and SpeechToTextService, fix options in SpeechToTextService, and reduce minSdkVersion to 24

--- a/app/src/main/res/values/credentials.xml
+++ b/app/src/main/res/values/credentials.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Paste Speech to Text information here -->
-    <string name="speech_text_iam_apikey"></string>
+    <string name="speech_text_iam_apikey">Alb8CQY8aG63hxhVf6o5bEgU0Zde2hXW-EQZf32v8y4Z</string>
     <string name="speech_text_url">https://stream.watsonplatform.net/speech-to-text/api</string>
 </resources>
